hardcoded time blocks

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,7 +31,51 @@
     <!-- Schedule container -->
     <div class="container">
       <!-- Time blocks -->
-      
+      <div class="row time-block">
+        <label for="event-input" class="col-1 hour">9AM</label>
+        <textarea name="event-input" id="event-input" class="col description past"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <label for="event-input" class="col-1 hour">10AM</label>
+        <textarea name="event-input" id="event-input" class="col description past"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <label for="event-input" class="col-1 hour">11AM</label>
+        <textarea name="event-input" id="event-input" class="col description past"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <label for="event-input" class="col-1 hour">12pm</label>
+        <textarea name="event-input" id="event-input" class="col description past"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <label for="event-input" class="col-1 hour">1PM</label>
+        <textarea name="event-input" id="event-input" class="col description past"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <label for="event-input" class="col-1 hour">2PM</label>
+        <textarea name="event-input" id="event-input" class="col description past"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <label for="event-input" class="col-1 hour">3PM</label>
+        <textarea name="event-input" id="event-input" class="col description past"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <label for="event-input" class="col-1 hour">4PM</label>
+        <textarea name="event-input" id="event-input" class="col description past"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <label for="event-input" class="col-1 hour">5PM</label>
+        <textarea name="event-input" id="event-input" class="col description past"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
     </div>
     
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
